[gd_scene load_steps=2 format=3 uid="uid://resourcespanel"]

[ext_resource type="Script" path="res://src/ui/ResourcesPanel.gd" id="1_k0v1n"]

[node name="ResourcesPanel" type="Control"]
anchors_preset = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -220.0
offset_right = 240.0
offset_bottom = -16.0
script = ExtResource("1_k0v1n")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
self_modulate = Color(1, 1, 1, 0.9)

[node name="Margin" type="MarginContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
separation = 8

[node name="Title" type="Label" parent="Panel/Margin/VBox"]
text = "Resources"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid" type="GridContainer" parent="Panel/Margin/VBox"]
columns = 2
custom_constants/vertical_separation = 4
custom_constants/horizontal_separation = 12

[node name="NatureLabel" type="Label" parent="Panel/Margin/VBox/Grid"]
text = "Nature"

[node name="NatureValue" type="Label" parent="Panel/Margin/VBox/Grid"]
unique_name_in_owner = true
text = "0"
horizontal_alignment = 2

[node name="EarthLabel" type="Label" parent="Panel/Margin/VBox/Grid"]
text = "Earth"

[node name="EarthValue" type="Label" parent="Panel/Margin/VBox/Grid"]
unique_name_in_owner = true
text = "0"
horizontal_alignment = 2

[node name="WaterLabel" type="Label" parent="Panel/Margin/VBox/Grid"]
text = "Water"

[node name="WaterValue" type="Label" parent="Panel/Margin/VBox/Grid"]
unique_name_in_owner = true
text = "0"
horizontal_alignment = 2

[node name="LifeLabel" type="Label" parent="Panel/Margin/VBox/Grid"]
text = "Life"

[node name="LifeValue" type="Label" parent="Panel/Margin/VBox/Grid"]
unique_name_in_owner = true
text = "0"
horizontal_alignment = 2
